--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -1,5 +1,5 @@
 <body>
-  <p>Puppy Name: <%= @name %></p>
-  <p>Puppy Breed: <%= @breed %></p>
-  <p>Puppy Age: <%= @age %> months</p>
+  <p>Puppy Name: <%= @newpuppy.name %></p>
+  <p>Puppy Breed: <%= @newpuppy.breed %></p>
+  <p>Puppy Age: <%= @newpuppy.months_old %> months</p>
 </body>
